# discobike

./: BLERemoteVariable.h  BLERunTimeStats.cpp  BLERunTimeStats.h  Task.cpp  Task.h  discobike2.ino  effects.cpp  effects.h
.idx/: dev.nix
discobike2/: discobike2.ino
discobiker/: .dir-locals.el  Cargo.toml  rust-toolchain.toml
discobiker/frontend/: Cargo.toml  rust-toolchain.toml
discobiker/frontend/.cargo/: config.toml
discobiker/frontend/src/: main.rs
discobiker/littlefs-1/: Cargo.toml
discobiker/littlefs-1/src/: block.rs  fmt.rs  free.rs  lib.rs  storage.rs  structs.rs
discobiker/littlefs-1/src/storage/: caching.rs  mod.rs  slice.rs
discobiker/littlefs-1/testdata/: large-dir.img  three-files.img
discobiker/nom-protobuf/: Cargo.toml
discobiker/nom-protobuf/src/: lib.rs  varint.rs
discobiker/src/: atomic_counter.rs  ble.rs  csmutex.rs  ina219.rs  lib.rs  log.rs  main.rs  output.rs  pins.rs
discobiker/src/actors/: barometer.rs  display.rs  imu.rs  light.rs  mod.rs  output.rs  power.rs  sound.rs
discobiker/src/actors/output/: effects.rs  volume.rs
discobiker/src/drivers/: esb.rs  ina219.rs  mod.rs
discobiker/src/drivers/neopixel/: filter.rs  rgb.rs  rgbw.rs
discobiker/src/output/: effects.rs
lib/: BLERemoteVariable.h  BLERunTimeStats.cpp  Task.h
