[package]
authors = ["Quentin Smith <quentin@mit.edu>"]
edition = "2018"
name = "discobiker"
version = "0.1.0"
resolver = "2"

[features]
mdbt50q = []

[dependencies]
embassy = { version = "0.1.0", features = ["nightly", "defmt"]}
embassy-hal-common = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-traits", "unstable-pac" ]}
embassy-embedded-hal = "0.1.0"
cortex-m        = { version = "0.7.3" }
cortex-m-rt = "0.7.0"
defmt = { version = "0.3", features = [] }
nrf-softdevice-defmt-rtt = { version = "0.1.0" }
panic-probe = { version = "0.3", features= ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "ble-gatt-server", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1" }
embedded-hal = "0.2.6"
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
fixed = "1.2.0"
heapless = "0.7.1"
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
critical-section = "0.2.7"
modular-bitfield = "0.11.2"
byteorder = { version = "1.4.3", default-features = false }
uom = { version = "0.33.0", default-features = false, features = ["autoconvert", "f32", "si"] }
apds9960 = { version = "0.1.0", default-features = false, features = ["async"] }
embedded-hal-async = "0.1.0-alpha.1"
dimensioned = { version = "0.8.0", default-features = false }
paste = "1.0.7"
drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time", "neopixel", "nrf"] }
ector = { version = "0.1.0", default-features = false }
ssd1306 = { version = "0.7.0" }
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
arrayvec = { version = "0.7.2", default-features = false }
atomic_float = { version = "0.1.0", default-features = false }
physical_constants = "0.4.1"
staticvec = { version = "0.11.6", default-features = false, features = [] }

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-defmt-rtt = { git = "https://github.com/embassy-rs/nrf-softdevice" }
apds9960 = { git = "https://github.com/quentinmit/apds9960-rs", branch = "async" }
uom = { git = "https://github.com/quentinmit/uom", branch = "photometric" }
drogue-device = { git = "https://github.com/drogue-iot/drogue-device" }
reqwless = { git = "https://github.com/drogue-iot/reqwless" }
ector = { git = "https://github.com/drogue-iot/ector.git" }
ssd1306 = { git = "https://github.com/simmsb/ssd1306" }
display-interface = { git = "https://github.com/simmsb/display-interface" }
physical_constants = { git = "https://github.com/quentinmit/rust-physical_constants", branch = "no_std" }
