[package]
authors = ["Quentin Smith <quentin@mit.edu>"]
edition = "2018"
name = "discobiker"
version = "0.1.0"
resolver = "2"
default-run = "discobiker"

[features]
default = ["async"]
async = []
mdbt50q = []
rtos-trace = ["dep:rtos-trace", "embassy-executor/rtos-trace", "systemview-target", "systemview-target/log", "systemview-target/callbacks-os", "systemview-target/callbacks-app", "log"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-sync/defmt",
    "embassy-hal-common/defmt",
    "embassy-nrf/defmt",
    "nrf-softdevice/defmt",
    "panic-probe/print-defmt",
    "drogue-device/defmt",
    "bme280/with_defmt"]

[profile.dev]
opt-level = 1
debug-assertions = true

[profile.dev.package.nrf-softdevice]
opt-level = 3

[profile.dev.package.embedded-graphics]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = false
incremental = false
codegen-units = 16

[profile.dev.package.embedded-graphics-core]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = false
incremental = false
codegen-units = 16

[profile.dev.package.byteorder]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = false
incremental = false
codegen-units = 16

[profile.dev.package.float-cmp]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = false
incremental = false
codegen-units = 16

[profile.dev.package.ssd1306]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = false
incremental = false
codegen-units = 16

[profile.dev.package.display-interface]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = false
incremental = false
codegen-units = 16

[profile.dev.package.bincode]
opt-level = 3

[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.embassy-executor]
opt-level = 3

[profile.dev.package.defmt]
opt-level = 3

[profile.dev.package.dimensioned]
opt-level = 3
#debug-assertions = false
#overflow-checks = false

[dependencies]
embassy-executor = { version = "0.1.0", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly", "unstable-traits"] }
embassy-sync = { version = "0.1.0", features = ["nightly"] }
embassy-futures = { version = "0.1.0", features = [] }
embassy-hal-common = { version = "0.1.0", features = [] }
embassy-nrf = { version = "0.1.0", features = ["nightly", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-traits", "unstable-pac"]}
embassy-embedded-hal = "0.1.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = { version = "0.3.2", features = [], optional = true }
defmt-rtt = { version = "0.3.2", optional = true }
panic-probe = { version = "0.3", features= [] }
nrf-softdevice = { version = "0.1.0", features = ["nrf52840", "s140", "ble-peripheral", "ble-central", "ble-gatt-server", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1" }
embedded-hal = "1.0.0-alpha.8"
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
fixed = "1.2.0"
heapless = "0.7.1"
log = { version = "0.4.17", optional = true }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
critical-section = "1.1.0"
modular-bitfield = "0.11.2"
byteorder = { version = "1.4.3", default-features = false }
uom = { version = "0.33.0", default-features = false, features = ["autoconvert", "f32", "si"] }
apds9960 = { version = "0.1.0", default-features = false, features = ["async"] }
embedded-hal-async = "0.1.0-alpha.1"
dimensioned = { version = "0.8.0", default-features = false, features = ["serde", "nightly"] }
paste = "1.0.7"
drogue-device = { version = "0.1.0", default-features = false, features = ["time", "neopixel", "nrf"] }
ector = { version = "0.1.0", default-features = false }
ssd1306 = { version = "0.7.0" }
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
arrayvec = { version = "0.7.2", default-features = false }
physical_constants = "0.4.1"
staticvec = { version = "0.11.6", default-features = false, features = [] }
serde = { version = "1.0.139", default-features = false, features = ["derive"] }
bincode = { version = "2.0.0-rc.1", default-features = false, features = ["serde"] }
serde_cbor = { version = "0.11.2", default-features = false }
num-derive = "0.3.3"
num_enum = { version = "0.5.7", default-features = false }
lsm6ds33 = { version = "0.5.0", default-features = false, features = ["async"] }
maybe-async-cfg = "0.2.1"
bme280 = { version = "0.4.4", default-features = false, features = ["async"] }
systemview-target = { version = "0.1.1", features = ["cortex-m"], optional = true }
rtos-trace = { version = "0.1.2", optional = true }
cfg-if = "1.0.0"
num-integer = { version = "0.1.45", default-features = false }
microfft = "0.5.0"
micromath = "2.0.0"
static_cell = "1.0.0"
trait_enum = { version = "0.5.0", default-features = false }
replace_with = { version = "0.1.7", default-features = false }
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
tween = { version = "1.0.1", default-features = false, features = ["libm"] }
pareen = { version = "0.3.0-alpha1", default-features = false, features = ["easer"] }
atomic-traits = "0.3.0"
nom = { version = "7.1.3", default-features = false }
nom-protobuf = { path = "nom-protobuf/" }

[patch.crates-io]
#embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
#embassy-time = { git = "https://github.com/embassy-rs/embassy" }
#embassy-util = { git = "https://github.com/embassy-rs/embassy" }
#embassy-hal-common = { git = "https://github.com/embassy-rs/embassy" }
#embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
#embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
#nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" }
#nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }
apds9960 = { git = "https://github.com/quentinmit/apds9960-rs", branch = "async" }
uom = { git = "https://github.com/quentinmit/uom", branch = "photometric" }
#drogue-device = { git = "https://github.com/drogue-iot/drogue-device" }
drogue-device = { path = "/Users/quentin/Software/drogue-device/device" }
reqwless = { git = "https://github.com/drogue-iot/reqwless" }
ector = { git = "https://github.com/drogue-iot/ector.git" }
#ector = { git = "https://github.com/quentinmit/ector.git", branch = "embassy-split-time" }
#ssd1306 = { git = "https://github.com/simmsb/ssd1306" }
ssd1306 = { path = "/Users/quentin/Software/ssd1306" }
display-interface = { git = "https://github.com/simmsb/display-interface" }
physical_constants = { git = "https://github.com/quentinmit/rust-physical_constants", branch = "no_std" }
dimensioned = { git = "https://github.com/quentinmit/dimensioned", branch = "no_std" }
bincode = { git = "https://github.com/bincode-org/bincode" }
#lsm6ds33 = { git = "https://github.com/quentinmit/lsm6ds33", branch = "async" }
#lsm6ds33 = { path = "/Users/quentin/Software/lsm6ds33" }
#bme280 = { git = "https://github.com/quentinmit/bme280-rs", branch = "async" }
bme280 = { path = "/Users/quentin/Software/bme280-rs" }
embassy-executor = { path = "/Users/quentin/Software/embassy/embassy-executor" }
embassy-time = { path = "/Users/quentin/Software/embassy/embassy-time" }
embassy-macros = { path = "/Users/quentin/Software/embassy/embassy-macros" }
embassy-nrf = { path = "/Users/quentin/Software/embassy/embassy-nrf" }
embassy-sync = { path = "/Users/quentin/Software/embassy/embassy-sync" }
embassy-futures = { path = "/Users/quentin/Software/embassy/embassy-futures" }
embassy-hal-common = { path = "/Users/quentin/Software/embassy/embassy-hal-common" }
embassy-embedded-hal = { path = "/Users/quentin/Software/embassy/embassy-embedded-hal" }
nrf-softdevice = { path = "/Users/quentin/Software/nrf-softdevice/nrf-softdevice" }
nrf-softdevice-s140 = { path = "/Users/quentin/Software/nrf-softdevice/nrf-softdevice-s140" }
#rtos-trace = { path = "/Users/quentin/Software/rtos-trace/rtos_trace" }
#systemview-target = { path = "/Users/quentin/Software/rtos-trace/systemview_target" }
pareen = { path = "/Users/quentin/Software/pareen" }
easer = { path = "/Users/quentin/Software/rust-easing" }
atomic-traits = { git = "https://github.com/flier/rust-atomic-traits", rev = "45f4b13d5f4880797cdf3d578ff8821e8bd7ce89" }
residua-zigzag = { git = "https://github.com/quentinmit/zigzag", branch = "no_std" }
