[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.64"
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
log = "0.4.19"
thiserror = "1.0.43"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["console", "Navigator", "DomException", "Bluetooth", "BluetoothDevice", "RequestDeviceOptions", "BluetoothLeScanFilterInit", "BluetoothRemoteGattServer", "BluetoothRemoteGattService"]}
