[package]
name = "littlefs-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte = "0.2.6"
enum-kinds = { version = "0.5.1", features = ["no-stdlib"] }
num_enum = { version = "0.5.7", default-features = false }

[patch.crates-io]
enum-kinds = { git = "https://github.com/quentinmit/enum-kinds", branch = "custom-values" }
