[package]
name = "littlefs-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
bitflags = "1.3.2"
byte = "0.2.6"
crc = "3.0.0"
defmt = "0.3.2"
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
enum-kinds = { version = "0.5.1", features = ["no-stdlib"] }
itertools = { version = "0.10.3", default-features = false }
num_enum = { version = "0.5.7", default-features = false }

[patch.crates-io]
enum-kinds = { git = "https://github.com/quentinmit/enum-kinds", branch = "custom-values" }

[dev-dependencies]
ctor = "0.1.22"
log = "0.4.17"
simplelog = { version = "0.12.0", features = ["paris"] }
tokio-test = "0.4.2"
