[package]
name = "nom-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#defmt = ["defmt"]

[dependencies]
defmt = { version = "0.3.2", optional = true }
log = "0.4.17"
nom = { version = "7.1.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
num_enum = { version = "0.5.9", default-features = false }
residua-zigzag = "0.1.0"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"

[patch.crates-io]
residua-zigzag = { git = "https://github.com/quentinmit/zigzag", branch = "no_std" }
